--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
 </head>
 <body>
     
+    <form class="form">
+        <select name ="" id="" class="category">
+            <option value="business">business</option>
+            <option value="entertainment">entertainment</option>
+            <option value="general">general</option>
+            <option value="health">health</option>
+            <option value="science">science</option>
+            <option value="sports">sports</option>
+            <option value="technology">technology</option>
+        </select>
+        <input type="text" class="pageSize" placeholder="Статей на сторінці">
+        <button class="search" type="submit">Пошук  </button>
+    </form>
+    <h2 class="counter"></h2>
+<ul class="list"></ul>
 
 
 
