--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <button class="search" type="submit">Пошук  </button>
     </form>
     <h2 class="counter"></h2>
+    <h3 class="totalPage"></h3>
 <ul class="list"></ul>
 
 
