--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <h2 class="counter"></h2>
     <h3 class="totalPage"></h3>
 <ul class="list"></ul>
+<button class="load">Load more
+</button>
 
 
 
