--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1> Запусти код перегляду новин з  Visual Studio Code </h1>
+    <h1> Запусти код перегляду новин через Visual Studio Code </h1>
     
     <form class="form">
         <select name ="" id="" class="category">
